--- a/index.html
+++ b/index.html
@@ -1,17 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LLM Translator</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>LLM語言翻譯</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="app">
-        <h1>LLM Translator</h1>
-        <textarea id="input" placeholder="Enter text..."></textarea>
-        <button id="translate-btn">Translate</button>
-        <div id="output"></div>
+    <!-- 懸浮設定切換鈕（左側圖示顯示測試結果） -->
+    <button id="settings-toggle" class="settings-toggle" aria-expanded="false" aria-controls="settings-panel" title="開啟/關閉設定（Ollama 網址與模型）">
+        <span id="settings-indicator" class="settings-indicator" aria-hidden="true">⏳</span>
+        ⚙️ 設定
+    </button>
+    <!-- 懸浮設定面板 -->
+    <section id="settings-panel" class="settings-panel" role="dialog" aria-modal="false" aria-labelledby="settings-heading">
+        <div class="settings-title">
+            <h3 id="settings-heading">連線與模型設定</h3>
+            <button class="close-x" id="settings-close" aria-label="關閉設定">×</button>
+        </div>
+        <div class="settings-inner">
+            <div class="settings-row">
+                <label for="ollama-url">Ollama API 網址（範例： http://localhost:11434 ）</label>
+                <div class="url-group">
+                    <input type="text" id="ollama-url" value="http://localhost:11434" inputmode="url" placeholder="http://localhost:11434"/>
+                    <button id="validate-btn" type="button">驗證連線</button>
+                    <span id="connection-status" class="status" aria-live="polite" title="連線狀態"></span>
+                </div>
+            </div>
+            <div class="settings-row">
+                <label for="model-select">選擇模型</label>
+                <div class="model-group">
+                    <select id="model-select" aria-label="模型清單">
+                        <option value="">載入中...</option>
+                    </select>
+                    <button id="refresh-models" type="button">重新整理</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="app" aria-live="polite">
+        <header class="topbar">
+            <div class="title">LLM語言翻譯</div>
+            <select id="source-lang" aria-label="來源語言">
+                <option value="auto">自動偵測</option>
+                <option value="en">英文</option>
+                <option value="zh-TW">中文（繁體）</option>
+                <option value="zh-CN">中文（簡體）</option>
+                <option value="ja">日文</option>
+            </select>
+            <button class="swap-btn" id="swap-btn" title="交換語言">↔</button>
+            <select id="target-lang" aria-label="目標語言">
+                <option value="en">英文</option>
+                <option value="zh-TW" selected>中文（繁體）</option>
+                <option value="zh-CN">中文（簡體）</option>
+                <option value="ja">日文</option>
+            </select>
+        </header>
+        <main class="workarea">
+            <section class="pane input">
+                <textarea id="input-text" class="box input" placeholder="輸入文字..." aria-label="輸入文字"></textarea>
+            </section>
+            <div class="mid">
+                <button class="translate-btn" id="translate-btn" title="執行翻譯">翻譯</button>
+            </div>
+            <section class="pane output">
+                <textarea id="output-text" class="box output" placeholder="翻譯結果..." readonly aria-label="翻譯結果"></textarea>
+            </section>
+        </main>
     </div>
     <script src="app.js"></script>
 </body>
