localize app title

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="app" aria-live="polite">
         <!-- 上方工具列（左：標題｜中：語言選單） -->
         <header class="topbar">
-            <div class="title">LLM語言翻譯</div>
+            <div id="app-title" class="title"></div>
 
             <select id="source-lang" aria-label="來源語言">
                 <option value="auto">自動偵測</option>
