--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>LLM Translator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./src/style.css">
 </head>
 <body>
 
@@ -92,6 +92,6 @@
             </section>
         </main>
     </div>
-<script src="app.js"></script>
+<script src="./src/app.js"></script>
 </body>
 </html>
